# autoencoding_experiments

./: .gitignore  README.md  colab.ipynb  dataset.yaml  model.yaml  pyproject.toml  ruff.toml  training.yaml
datasets/: __init__.py
distributions/: base.py
models/: autoencoder.py
src/: colab.ipynb  run.py  test.ipynb  train.py
src/datasets/: __init__.py  cifar10.py  stl10.py
src/experiments/: autoencoder_standard.py  vae_standard.py
src/logger/: __init__.py  base.py  caveman.py  mlflow.py
src/models/: __init__.py  autoencoder.py  base.py  vae.py
src/utils/: evaluate.py  nn.py  parse.py  stats.py  train.py  visuals.py
utils/: nn.py  utils.py
