[project]
name = "autoencoding-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "human-id>=0.2.0",
    "ipykernel>=6.29.5",
    "mlflow>=2.18.0",
    "ruff>=0.8.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
